dojo.java


    public ByteByReference name;
    public byte option;
    public CArrayEnumOption options;

  }

  @Structure.FieldOrder({"name", "option", "options"})
  class EnumByReference extends Structure implements Structure.ByReference {
    public EnumByReference() {
      super();
    }

    public EnumByReference(Pointer p) {
      super(p);
    }

    public ByteByReference name;
    public byte option;
    public CArrayEnumOption options;

  }



  @Structure.FieldOrder({"data", "data_len"})
  class CArrayTy extends Structure implements Structure.ByValue {
    public CArrayTy() {
      super();
    }

    public CArrayTy(Pointer p) {
      super(p);
    }

    public TyByReference data;
    public _Size data_len;

  }

  @Structure.FieldOrder({"data", "data_len"})
  class CArrayTyByReference extends Structure implements Structure.ByReference {
    public CArrayTyByReference() {
      super();
    }

    public CArrayTyByReference(Pointer p) {
      super(p);
    }

    public TyByReference data;
    public _Size data_len;

  }



  class Ty extends IntegerType {
    public Ty() {
      super(4, true);
    }

    public Ty(long value) {
      super(4, value, true);
    }

    public Ty(Pointer p) {
      this(p.getInt(0));
    }
    public static final Ty Primitive_ = new Ty(1);
    public static final Ty Struct_ = new Ty(2);
    public static final Ty Enum_ = new Ty(3);
    public static final Ty Tuple_ = new Ty(4);
    public static final Ty Array_ = new Ty(5);
    public static final Ty ByteArray = new Ty(6);

  }

  class TyByReference extends ByReference {
    public TyByReference() {
      super(4);
    }

    public TyByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public Ty getValue() {
      Pointer p = getPointer();
      return new Ty(p.getInt(0));
    }

    public void setValue(Ty value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  @Structure.FieldOrder({"name", "ty", "key"})
  class Member extends Structure implements Structure.ByValue {
    public Member() {
      super();
    }

    public Member(Pointer p) {
      super(p);
    }

    public ByteByReference name;
    public TyByReference ty;
    public _Boolean key;

  }

  @Structure.FieldOrder({"name", "ty", "key"})
  class MemberByReference extends Structure implements Structure.ByReference {
    public MemberByReference() {
      super();
    }

    public MemberByReference(Pointer p) {
      super(p);
    }

    public ByteByReference name;
    public TyByReference ty;
    public _Boolean key;

  }



  @Structure.FieldOrder({"data", "data_len"})
  class CArrayMember extends Structure implements Structure.ByValue {
    public CArrayMember() {
      super();
    }

    public CArrayMember(Pointer p) {
      super(p);
    }

    public MemberByReference data;
    public _Size data_len;

  }

  @Structure.FieldOrder({"data", "data_len"})
  class CArrayMemberByReference extends Structure implements Structure.ByReference {
    public CArrayMemberByReference() {
      super();
    }

    public CArrayMemberByReference(Pointer p) {
      super(p);
    }

    public MemberByReference data;
    public _Size data_len;

  }



  @Structure.FieldOrder({"name", "children"})
  class Struct extends Structure implements Structure.ByValue {
    public Struct() {
      super();
    }

    public Struct(Pointer p) {
      super(p);
    }

    public ByteByReference name;
    public CArrayMember children;

  }

  @Structure.FieldOrder({"name", "children"})
  class StructByReference extends Structure implements Structure.ByReference {
    public StructByReference() {
      super();
    }

    public StructByReference(Pointer p) {
      super(p);
    }

    public ByteByReference name;
    public CArrayMember children;

  }



  @Structure.FieldOrder({"data", "data_len"})
  class CArrayStruct extends Structure implements Structure.ByValue {
    public CArrayStruct() {
      super();
    }

    public CArrayStruct(Pointer p) {
      super(p);
    }

    public StructByReference data;
    public _Size data_len;

  }

  @Structure.FieldOrder({"data", "data_len"})
  class CArrayStructByReference extends Structure implements Structure.ByReference {
    public CArrayStructByReference() {
      super();
    }

    public CArrayStructByReference(Pointer p) {
      super(p);
    }

    public StructByReference data;
    public _Size data_len;

  }



  @Structure.FieldOrder({"hashed_keys", "models"})
  class Entity extends Structure implements Structure.ByValue {
    public Entity() {
      super();
    }

    public Entity(Pointer p) {
      super(p);
    }

    public FieldElement hashed_keys;
    public CArrayStruct models;

  }

  @Structure.FieldOrder({"hashed_keys", "models"})
  class EntityByReference extends Structure implements Structure.ByReference {
    public EntityByReference() {
      super();
    }

    public EntityByReference(Pointer p) {
      super(p);
    }

    public FieldElement hashed_keys;
    public CArrayStruct models;

  }



  @Structure.FieldOrder({"data", "data_len"})
  class CArrayEntity extends Structure implements Structure.ByValue {
    public CArrayEntity() {
      super();
    }

    public CArrayEntity(Pointer p) {
      super(p);
    }

    public EntityByReference data;
    public _Size data_len;

  }

  @Structure.FieldOrder({"data", "data_len"})
  class CArrayEntityByReference extends Structure implements Structure.ByReference {
    public CArrayEntityByReference() {
      super();
    }

    public CArrayEntityByReference(Pointer p) {
      super(p);
    }

    public EntityByReference data;
    public _Size data_len;

  }



  class ResultCArrayEntity extends IntegerType {
    public ResultCArrayEntity() {
      super(4, true);
    }

    public ResultCArrayEntity(long value) {
      super(4, value, true);
    }

    public ResultCArrayEntity(Pointer p) {
      this(p.getInt(0));
    }
    public static final ResultCArrayEntity OkCArrayEntity = new ResultCArrayEntity(1);
    public static final ResultCArrayEntity ErrCArrayEntity = new ResultCArrayEntity(2);

  }

  class ResultCArrayEntityByReference extends ByReference {
    public ResultCArrayEntityByReference() {
      super(4);
    }

    public ResultCArrayEntityByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public ResultCArrayEntity getValue() {
      Pointer p = getPointer();
      return new ResultCArrayEntity(p.getInt(0));
    }

    public void setValue(ResultCArrayEntity value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  class COptionFieldElement extends IntegerType {
    public COptionFieldElement() {
      super(4, true);
    }

    public COptionFieldElement(long value) {
      super(4, value, true);
    }

    public COptionFieldElement(Pointer p) {
      this(p.getInt(0));
    }
    public static final COptionFieldElement SomeFieldElement = new COptionFieldElement(1);
    public static final COptionFieldElement NoneFieldElement = new COptionFieldElement(2);

  }

  class COptionFieldElementByReference extends ByReference {
    public COptionFieldElementByReference() {
      super(4);
    }

    public COptionFieldElementByReference(Pointer p) {
      super(4);
      setPointer(p);
    }

    public COptionFieldElement getValue() {
      Pointer p = getPointer();
      return new COptionFieldElement(p.getInt(0));
    }

    public void setValue(COptionFieldElement value) {
      Pointer p = getPointer();
      p.setInt(0, value.intValue());
    }

  }



  @Structure.FieldOrder({"data", "data_len"})
  class CArrayCOptionFieldElement extends Structure implements Structure.ByValue {
    public CArrayCOptionFieldElement() {
      super();
    }

    public CArrayCOptionFieldElement(Pointer p) {
      super(p);
    }

    public COptionFieldElementByReference data;
    public _Size data_len;

  }

  @Structure.FieldOrder({"data", "data_len"})
  class CArrayCOptionFieldElementByReference extends Structure implements Structure.ByReference {
    public CArrayCOptionFieldElementByReference() {
      super();
    }

    public CArrayCOptionFieldElementByReference(Pointer p) {
      super(p);
    }

    public COptionFieldElementByReference data;
    public _Size data_len;

  }



  @Structure.FieldOrder({"data", "data_len"})
  class CArrayc_char extends Structure implements Structure.ByValue {
    public CArrayc_char() {
      super();
    }

    public CArrayc_char(Pointer p) {
      super(p);
    }

    public PointerByReference data;
    public _Size data_len;

  }

  @Structure.FieldOrder({"data", "data_len"})
  class CArrayc_charByReference extends Structure implements Structure.ByReference {
    public CArrayc_charByReference() {
      super();
    }

    public CArrayc_charByReference(Pointer p) {
      super(p);
    }

    public PointerByReference data;
    public _Size data_len;

  }



  @Structure.FieldOrder({"keys", "pattern_matching", "models"})
  class KeysClause extends Structure implements Structure.ByValue {
    public KeysClause() {
      super();
    }

    public KeysClause(Pointer p) {
      super(p);
    }

    public CArrayCOptionFieldElement keys;
    public PatternMatching pattern_matching;
    public CArrayc_char models;

  }

  @Structure.FieldOrder({"keys", "pattern_matching", "models"})
  class KeysClauseByReference extends Structure implements Structure.ByReference {
    public KeysClauseByReference() {
      super();
    }

    public KeysClauseByReference(Pointer p) {
      super(p);
    }

    public CArrayCOptionFieldElement keys;
    public PatternMatching pattern_matching;
    public CArrayc_char models;

  }



  @Structure.FieldOrder({"model", "member", "operator_", "value"})
  class MemberClause extends Structure implements Structure.ByValue {
    public MemberClause() {
      super();
    }

    public MemberClause(Pointer p) {
      super(p);
    }

    public ByteByReference model;
    public ByteByReference member;
    public ComparisonOperator operator_;
    public Primitive value;

  }

  @Structure.FieldOrder({"model", "member", "operator_", "value"})
  class MemberClauseByReference extends Structure implements Structure.ByReference {
    public MemberClauseByReference() {
      super();
    }

    public MemberClauseByReference(Pointer p) {
      super(p);
    }

    public ByteByReference model;
    public ByteByReference member;
    public ComparisonOperator operator_;
    public Primitive value;

  }



  @Structure.FieldOrder({"data", "data_len"})
  class CArrayClause extends Structure implements Structure.ByValue {
    public CArrayClause() {
      super();
    }

    public CArrayClause(Pointer p) {
      super(p);
    }

    public ClauseByReference data;
    public _Size data_len;

  }

  @Structure.FieldOrder({"data", "data_len"})
  class CArrayClauseByReference extends Structure implements Structure.ByReference {
    public CArrayClauseByReference() {
      super();
    }

    public CArrayClauseByReference(Pointer p) {
      super(p);
    }

    public ClauseByReference data;
    public _Size data_len;

  }



  @Structure.FieldOrder({"operator_", "clauses"})
  class CompositeClause extends Structure implements Structure.ByValue {
    public CompositeClause() {
      super();
    }

    public CompositeClause(Pointer p) {
      super(p);
    }

    public LogicalOperator operator_;
    public CArrayClause clauses;

  }

  @Structure.FieldOrder({"operator_", "clauses"})
  class CompositeClauseByReference extends Structure implements Structure.ByReference {
    public CompositeClauseByReference() {
      super();
    }

    public CompositeClauseByReference(Pointer p) {
      super(p);
    }

    public LogicalOperator operator_;
    public CArrayClause clauses;

  }



  class Clause extends IntegerType {
    public Clause() {
      super(4, true);
    }

    public Clause(long value) {
      super(4, value, true);
    }
